# galib

./: .gitignore  CMakeLists.txt  GaLib.sln  LICENSE.txt  README.md  cache.h  file_system.cpp  file_system.h  intrusive_containers.h  intrusive_containers_hashset_tests.cpp  intrusive_containers_list_tests.cpp  process.cpp  process.h  subprocess.h
GaLib/: GaLib.vcxproj  GaLib.vcxproj.filters  stdafx.cpp
GaLib/include/galib/: base.h
GaLib/include/galib/encoding/: base64.h
GaLib/include/galib/intrusive/: dictionary.h  hashset.h  link.h  list.h  object.h
GaLib/include/galib/intrusive/detail/: dict_iterator.h  list_iterator.h
GaLib/include/galib/io/: reader.h  writer.h
GaLib/include/galib/util/: date.h  hash.h  nullable.h  object.h
GaLibTest/: GaLibTest.vcxproj  GaLibTest.vcxproj.filters  main.cpp  test.h
GaLibTest/encoding/: base64.cpp
GaLibTest/intrusive/: idictionary.cpp  ihashset.cpp  ilist.cpp
GaLibTest/util/: date.cpp
tests/: cache_tests.cpp  filesystem_tests.cpp  intrusive_containers_dictionary_tests.cpp  intrusive_containers_list_tests.cpp  main.cpp  process_tests.cpp
tools/cmaker/: CMakeLists.txt  CMaker.cpp  CMaker.h  cmaker.json  main.cpp
tools/cmaker/tests/: CMakerTests.cpp  cmaker.json  testproject_input.cbp  testproject_output.cbp.xml
